syntax = "proto3";

package tanks;

import "unity_common.proto";

option go_package = "/proto";
option csharp_namespace = "Channeld.Examples.Tanks";

message TankState {
    // Marks that the state should be removed from tankStates map
    bool removed = 1;
    int32 health = 2;
}

message TankGameChannelData {
    map<uint32, channeld.TransformState> transformStates = 1;
    map<uint32, TankState> tankStates = 2;
}